--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,16 @@
 
 html {
   scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 @layer utilities {
